--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+
   "scripts": {
-    "test": ""
+    "test": "",
+    "start":"nodemon src/server.js"
   },
   "repository": {
     "type": "git",
