--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "",
-    "start": "nodemon src/server.js --exec babel-node --presets es2015,stage-2"
+    "start": "nodemon src/server.js --exec babel-node",
+    "build": "babel src -d dist",
+    "serve": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -18,15 +20,15 @@
   },
   "homepage": "https://github.com/Vchekryzhov/machine-info-server#readme",
   "dependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-stage-2": "^6.24.1",
     "body-parser": "^1.18.3",
     "dgram": "^1.0.1",
     "express": "^4.16.3",
     "mongodb": "^3.1.0-beta4"
   },
   "devDependencies": {
-    "nodemon": "^1.17.5"
+    "nodemon": "^1.17.5",
+    "babel-cli": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1"
   }
 }
